--- a/SuperHeroBook/Base.lproj/Main.storyboard
+++ b/SuperHeroBook/Base.lproj/Main.storyboard
@@ -1,24 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MzE-Dk-CNZ">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SuperHeroBook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2mO-ZV-ObW">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="2mO-ZV-ObW" secondAttribute="bottom" id="HY1-TU-QJB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2mO-ZV-ObW" secondAttribute="trailing" id="dcZ-Kp-NLg"/>
+                            <constraint firstItem="2mO-ZV-ObW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jaV-w8-EWQ"/>
+                            <constraint firstItem="2mO-ZV-ObW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mqb-ar-9Th"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="eOe-c8-W5j"/>
+                    <connections>
+                        <outlet property="tableView" destination="2mO-ZV-ObW" id="CoC-HC-Oen"/>
+                        <segue destination="SwF-vm-cl1" kind="show" identifier="toDetailsVC" id="X4A-0i-hig"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="939.13043478260875" y="57.589285714285708"/>
+        </scene>
+        <!--Details View Controller-->
+        <scene sceneID="P6v-IN-lgB">
+            <objects>
+                <viewController id="SwF-vm-cl1" customClass="DetailsViewController" customModule="SuperHeroBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zMj-Mf-WXN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Si5-9N-wj5">
+                                <rect key="frame" x="50" y="167" width="314" height="290"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcr-zV-MMc">
+                                <rect key="frame" x="109" y="494" width="196" height="97"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="97" id="kRE-2s-XdQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="yxn-4W-x4u"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Si5-9N-wj5" firstAttribute="centerX" secondItem="fcr-zV-MMc" secondAttribute="centerX" id="050-mY-N9y"/>
+                            <constraint firstItem="fcr-zV-MMc" firstAttribute="top" secondItem="Si5-9N-wj5" secondAttribute="bottom" constant="37" id="AxZ-aB-nWm"/>
+                            <constraint firstItem="yxn-4W-x4u" firstAttribute="bottom" secondItem="fcr-zV-MMc" secondAttribute="bottom" constant="271" id="FUO-bb-SHs"/>
+                            <constraint firstItem="fcr-zV-MMc" firstAttribute="leading" secondItem="yxn-4W-x4u" secondAttribute="leading" constant="109" id="FsZ-9a-wrB"/>
+                            <constraint firstItem="Si5-9N-wj5" firstAttribute="centerX" secondItem="zMj-Mf-WXN" secondAttribute="centerX" id="Jdw-v0-4QW"/>
+                            <constraint firstItem="Si5-9N-wj5" firstAttribute="top" secondItem="yxn-4W-x4u" secondAttribute="top" constant="79" id="QgV-Rr-yii"/>
+                            <constraint firstItem="Si5-9N-wj5" firstAttribute="leading" secondItem="yxn-4W-x4u" secondAttribute="leading" constant="50" id="sx3-QX-wAP"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="HuZ-0D-DUd"/>
+                    <connections>
+                        <outlet property="imageView" destination="Si5-9N-wj5" id="sUe-Y3-Kx5"/>
+                        <outlet property="label" destination="fcr-zV-MMc" id="8RU-o8-xFJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="chV-GG-Vfc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1689.8550724637682" y="57.589285714285708"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="32h-il-J92">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MzE-Dk-CNZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="R7L-Az-vCA">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="2Uc-DG-XM7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cLJ-Dk-2Lu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="28.985507246376812" y="57.589285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
